--- a/GAME/GAME.cbp
+++ b/GAME/GAME.cbp
@@ -44,6 +44,8 @@
 		<Unit filename="GAME.cpp" />
 		<Unit filename="comfunc.cpp" />
 		<Unit filename="comfunc.h" />
+		<Unit filename="map_game.cpp" />
+		<Unit filename="map_game.hpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
