--- a/GAME/GAME.cbp
+++ b/GAME/GAME.cbp
@@ -15,12 +15,15 @@
 					<Add option="-g" />
 					<Add directory="C:/sdl2/SDL2_image-2.8.5/x86_64-w64-mingw32/include/SDL2" />
 					<Add directory="C:/sdl2/SDL2-2.28.5/x86_64-w64-mingw32/include/SDL2" />
+					<Add directory="C:/sdl2/SDL2_ttf-2.24.0/x86_64-w64-mingw32/include/SDL2" />
 				</Compiler>
 				<Linker>
 					<Add option="-lmingw32 -lSDL2main -lSDL2" />
 					<Add option="-lSDL2_image" />
+					<Add option="-lSDL2_ttf" />
 					<Add directory="C:/sdl2/SDL2-2.28.5/x86_64-w64-mingw32/lib" />
 					<Add directory="C:/sdl2/SDL2_image-2.8.5/x86_64-w64-mingw32/lib" />
+					<Add directory="C:/sdl2/SDL2_ttf-2.24.0/x86_64-w64-mingw32/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -41,15 +44,21 @@
 		</Compiler>
 		<Unit filename="Baseoject.cpp" />
 		<Unit filename="Baseoject.h" />
+		<Unit filename="Enemy.cpp" />
+		<Unit filename="Enemy.h" />
 		<Unit filename="GAME.cpp" />
 		<Unit filename="avartar.cpp" />
 		<Unit filename="avartar.hpp" />
 		<Unit filename="comfunc.cpp" />
 		<Unit filename="comfunc.h" />
+		<Unit filename="item.cpp" />
+		<Unit filename="item.h" />
 		<Unit filename="map_game.cpp" />
 		<Unit filename="map_game.hpp" />
 		<Unit filename="move.cpp" />
 		<Unit filename="move.hpp" />
+		<Unit filename="power.cpp" />
+		<Unit filename="power.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
