--- a/GAME/GAME.cbp
+++ b/GAME/GAME.cbp
@@ -16,14 +16,17 @@
 					<Add directory="C:/sdl2/SDL2_image-2.8.5/x86_64-w64-mingw32/include/SDL2" />
 					<Add directory="C:/sdl2/SDL2-2.28.5/x86_64-w64-mingw32/include/SDL2" />
 					<Add directory="C:/sdl2/SDL2_ttf-2.24.0/x86_64-w64-mingw32/include/SDL2" />
+					<Add directory="C:/sdl2/SDL2_mixer-devel-2.8.1-mingw/SDL2_mixer-2.8.1/x86_64-w64-mingw32/include/SDL2" />
 				</Compiler>
 				<Linker>
 					<Add option="-lmingw32 -lSDL2main -lSDL2" />
 					<Add option="-lSDL2_image" />
 					<Add option="-lSDL2_ttf" />
+					<Add option="-lSDL2_mixer" />
 					<Add directory="C:/sdl2/SDL2-2.28.5/x86_64-w64-mingw32/lib" />
 					<Add directory="C:/sdl2/SDL2_image-2.8.5/x86_64-w64-mingw32/lib" />
 					<Add directory="C:/sdl2/SDL2_ttf-2.24.0/x86_64-w64-mingw32/lib" />
+					<Add directory="C:/sdl2/SDL2_mixer-devel-2.8.1-mingw/SDL2_mixer-2.8.1/x86_64-w64-mingw32/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
